<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/spinnerHolder"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:entries="@array/list_labels"
            android:gravity="center|end"
            android:spinnerMode="dropdown"
            android:visibility="visible" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_label"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/button_label"
        android:textColor="@color/colorPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_model"/>

    <Button
        android:id="@+id/button_train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/button_train"
        android:textColor="@color/colorPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_label" />

    <Button
        android:id="@+id/button_get_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/button_get_model"
        android:textColor="@color/colorPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_train" />

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="350dp"
        android:layout_height="170dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorGray"
        android:textColor="@color/colorDarkGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_result" />

    <Button
        android:id="@+id/button_inference"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/button_inference"
        android:textColor="@color/colorPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorWhite"
        android:text="@string/button_result"
        android:textColor="@color/colorPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />

</androidx.constraintlayout.widget.ConstraintLayout>